2016-04-19  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * callbacks/render_ops.c, main/graphics.c, slice_window/colour_bar.c,
	structures/render.c, Include/display_types.h: Add support for
	wireframe overlay and point rendering modes. Requires updated
	bicgl.

2016-02-23  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * slice_window/intensity_plot.c (and elsewhere): Add intensity plot
	that mimics and extends some old xdisp features.

2016-01-22  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * slice_window/slice_events.c, etc.: Finally add a measurement feature
	very similar to that of BrainBrowser. Ctrl+Left Click now starts
	displaying a line and length that can be dragged around the slice.
2016-01-20  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * various: Add rulers for Ayca and the Petrides lab. These are toggled
	using the F10 key.

2016-01-20  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * main/three_d.c, etc.: Simple autorotation feature tied to F12 key for now

2016-01-16  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * slice_window/slice_events.c, callbacks/colour_coding.c, main/three_d.c: Increase
	consistency between behaviors of the vertex and volume colour bars. Also added
	some documentation and fixed some bugs.

2016-01-07  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * callbacks/file.c, input_files/poly_formats.c: Support output of
	.x3d, .ply, and Wavefront .obj format surfaces.

2015-12-15  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * various: Fully implement vertex data, including colour coding support
	and multicolumn text data files.

2015-11-10  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * main/main.c, slice_window/colour_coding.c,	Include/global_variables.h:
	Update the way we implement the initial colour range options.
   * Documentation/Display.tex, Documentation/globals.tex: Document
	these changes.

2015-11-06  Robert D. Vincent <robert.d.vincent@mcgill.ca>